--- a/README.org
+++ b/README.org
@@ -1,8 +1,14 @@
 * tattood-android
 ** Missing
-  + Tattoo Page
+  + Tattoo Page [/]
+    + [ ] Clickable username
+    + [ ] Clickable Tag
+  + Search Page
+  + Tattoo Edit Page
   + Upload (Tag, Privacy)
   + Other User
 ** Bug
   + See More page shows empty entries
-  + Change See more to a grid instead of LinearLayout
+  + Save tattoos using tattoo id not using loop index
+  + CameraFragment.java gives warning: attempt to use a camera after disconnect()
+    Most probably onPause()/onResume() related
