--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_see_more">See More</string>
+    <string name="title_activity_tattoo">TattooActivity</string>
+    <string name="title_activity_user">UserActivity</string>
 </resources>
