Tattoos are now editable through profile page

--- a/README.org
+++ b/README.org
@@ -1,14 +1,13 @@
 * tattood-android
 ** Missing
-  + Search Page
-  + Tattoo Edit Page
+  + Search Page (Works on clicking from tag/username but there is no dedicated search bar)
   + Upload (Tag, Privacy)
 ** Bug
   + See-More page shows empty entries
   + tattoos should be saved using tattoo id not using loop index. (index might cause collision)
   + CameraFragment.java gives warning: attempt to use a camera after disconnect()
     Most probably onPause()/onResume() related
-  + Currently there is a bug in Tattoo interactions if listener is null OnClick gets called in
+  + Currently there is a bug in Tattoo interactions. If listener is null, OnClick gets called in+
     OnListFragmentInteractionListener. Otherwise, it gets called in TatooRecyclerViewAdapter.
     I've used this to distinguish between calls from Discovery Page and Profile Page;
     but it is definitely a bug.
