--- a/README.org
+++ b/README.org
@@ -25,5 +25,11 @@
     + [X] Whether via back-button or something else, user should never be able to reach back the login screen
           :nohistory should fix this
   + Upload button does not appear in Profile Fragment
-  + Change Upload button to FAB
+  + Change Upload button to FAB (will fix the above bug)
   + Change Camera button to FAB
+  + Fix tattoo tags
+    + [ ] It should be a relation in the database instead of pipe separated lists
+    + [ ] Server must handle newly added tags
+    + [ ] Currently, all requests to tattoo-update deletes all tags of a tattoo and reinserts. This,
+      doesn't cause much problem since number of tags are quite small, but there might be a better
+      way of doing this.
