--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="new_tag">New Tag</string>
     <string name="by">by</string>
     <string name="user">User</string>
+    <string name="extract_submit">Submit</string>
 </resources>
