--- a/README.org
+++ b/README.org
@@ -1,15 +1,4 @@
 * tattood-android
 ** Missing
   + Search Page (Works on clicking from tag/username but there is no dedicated search bar)
-  + Upload (Tag, Privacy)
-** Bug [4/7]
-  + CameraFragment gives warning: attempt to use a camera after disconnect()
-    Most probably onPause()/onResume() related
-  + Visual Interface looks horrible
-  + [ ] Recursive clicks should lead back to Discovery page (From tattoo? user? all?)
-  + [ ] Change Upload button to FAB
-  + [ ] Change Camera button to FAB
-  + [ ] Currently, all requests to tattoo-update deletes all tags of a tattoo and reinserts. This,
-    doesn't cause much problem since number of tags are quite small, but there might be a better
-    way of doing this.
-  + [ ] TagItemAdapter tag_delete should not send Request
+  + AR Camera
