--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,10 @@
     <string name="extract_submit">Submit</string>
     <string name="tags">Tags</string>
     <string name="users">Users</string>
+    <string name="title_edit">EditActivity</string>
+    <string name="title_register">Register</string>
+    <string name="title_profile">Profile</string>
+    <string name="title_discovery">Discover</string>
+    <string name="search">Search</string>
+    <string name="search_hint">Search</string>
 </resources>
