--- a/README.org
+++ b/README.org
@@ -1,37 +1,35 @@
-* tattood-android
-** Missing
-  + Search Page (Works on clicking from tag/username but there is no dedicated search bar)
-  + AR Camera
-
 * TODO
+** Tattoo Page [4/4]
++ [X] Increase size
++ [X] Add margin
++ [X] Change like button
++ [X] From top to bottom:
+  + [X] Profile photo
+  + [X] Name
+  + [X] Tattoo
+  + [X] Like button (HEART)
+  + [X] #of likes
+  + [X] Camera button
 ** Discovery [5/5]
 + [X] Discovery Page Profile Button
 + [X] Pull-swipe longer animation
 + [X] Toolbar color / transparent with background
 + [X] Background color
 + [X] Discovery Page list view Align and increase size
-** Search [2/4]
+** General [0/2]
++ [ ] Change text font
++ [ ] Decide on color scheme
+** Search [3/4]
 + [X] [BUG] Search See More inactive
 + [X] [BUG] Tattoo Tag Search
 + [ ] Search User-Name should list users
-+ [ ] Show label when there are no results
++ [X] Show label when there are no results
 ** See more [1/5]
 + [X] See more changes to single row
 + [ ] Auto load at the bottom of the page
 + [ ] Change See More button
 + [ ] See more Card layout grid
 + [ ] See more: disappearing toolbar
-** Tattoo Page [2/4]
-+ [X] Increase size
-+ [X] Add margin
-+ [ ] Change like button
-+ [-] From top to bottom:
-  + [X] Profile photo
-  + [X] Name
-  + [X] Tattoo
-  + [ ] Like button (HEART)
-  + [ ] #of likes
-  + [ ] Camera button
 ** Profile Page [1/6]
 + [X] Make profile icon circular
 + [ ] Profile page list alignment
@@ -52,7 +50,11 @@
 + [ ] Crop icon. Finish/Cancel will appear on crop. Revert to original will appear on finish
 + [ ] Move submit to the bottom
 + [ ] Save the original photo to revert back
-** Other User Page [/]
+** AR Camera [0/2]
++ [ ] Save
++ [ ] Share
+** Other User Page [0/1]
++ [ ] Image size
 ** Core [0/6]
 + [ ] Cache profile photo
 + [ ] Auto-login fails
