--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,5 @@
     <string name="title_discovery">Discover</string>
     <string name="search">Search</string>
     <string name="search_hint">Search</string>
+    <string name="add_new_tag">Enter new tag...</string>
 </resources>
