--- a/README.org
+++ b/README.org
@@ -33,9 +33,10 @@
 + [X] Show label when there are no results
 + [ ] Search User-Name should list users
 + [ ] Add recent searches
-** See more [1/5]
+** See more [1/6]
 + [X] See more changes to single row
 + [ ] Auto load at the bottom of the page
++ [ ] Users should have different layout
 + [ ] Change See More button
 + [ ] See more Card layout grid
   Three alternatives: [[https://developer.android.com/training/material/lists-cards.html#cardview][Official]] and [[https://github.com/gabrielemariotti/cardslib][3rd Party]], [[https://github.com/rubensousa/ViewPagerCards][Duolingo-like]]
@@ -72,19 +73,22 @@
 ** AR Camera [0/2]
 + [ ] Save
 + [ ] Share
-** Core [0/13]
+** Core [1/12]
 + [ ] Cache profile photo
   Check [[https://github.com/facebook/fresco][Fresco]]
-+ [ ] Auto-login fails
-+ [ ] Change see more activity to adapt different behaviours
 + [ ] Liking a tattoo before opening profile page fails
-+ [ ] Liking a tattoo doesn't update the image in popular list
 + [ ] Change Tattoo tag to make use of the library
 + [ ] Tag must be not empty
-+ [ ] Tag length
++ [ ] Limit the Tag length
 + [ ] Tag must be unique
 + [ ] Check if PNG
 + [ ] Upload submit should go back to profile page
 + [ ] Tattoo is added to database even if upload function fails
 + [ ] Ask for confirmation to discard changes in TattooEdit
-+ [ ] Make all TagViews uniform
++ [X] Make all TagViews uniform
++ [ ] Try to combine TagGroup and Tattoo.Tags
+** ??? [/]
++ [ ] Liking a tattoo doesn't update the image in popular list [SHOULD IT?]
++ [ ] Auto-login fails
++ [ ] Change create_json method
++ [ ] Change see more activity to adapt different behaviours
