--- a/README.org
+++ b/README.org
@@ -22,6 +22,14 @@
 + [X] Move submit to the bottom
 + [X] Run tensorflow initially
 + [X] Revert to original
+** Tattoo Edit Page [7/7]
++ [X] Change public/private switch
++ [X] Put Delete Button
++ [X] Increase tattoo size
++ [X] Add margin to tattoo
++ [X] Put whole page in a frame and set background
++ [X] [[https://android-arsenal.com/details/1/2566][The Android Arsenal - Tags - Android TagView]]
++ [X] Tattoo Size is broken on Cat Tattoo
 ** General [0/3]
 + [ ] Change text font
   + [[http://fontawesome.io][FontAwesome]]
@@ -60,14 +68,6 @@
   + [[https://github.com/florent37/MaterialViewPager?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=1731][GitHub - florent37/MaterialViewPager: A Material Design ViewPager easy to use...]]
   + [[https://github.com/H07000223/FlycoTabLayout?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=2756][GitHub - H07000223/FlycoTabLayout: An Android TabLayout Lib]]
   + [[https://github.com/rey5137/Material?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=1685][GitHub - rey5137/material: A library to bring fully animated Material Design ...]]
-** Tattoo Edit Page [6/7]
-+ [X] Change public/private switch
-+ [X] Put Delete Button
-+ [ ] Tattoo Size is broken on Cat Tattoo
-+ [X] Increase tattoo size
-+ [X] Add margin to tattoo
-+ [X] Put whole page in a frame and set background
-+ [X] [[https://android-arsenal.com/details/1/2566][The Android Arsenal - Tags - Android TagView]]
 ** Other User Page [0/1]
 + [ ] Image size
 ** AR Camera [0/2]
@@ -82,17 +82,18 @@
 + [X] Upload submit should go back to profile page
 + [ ] Cache profile photo [[[https://github.com/facebook/fresco][Fresco]]]
 + [ ] Liking a tattoo before opening profile page fails
-+ [ ] Check if PNG
 + [ ] Ask for confirmation to discard changes in TattooEdit
 + [ ] Try to combine TagGroup and Tattoo.Tags
 ** Server [1/4]
-+ [ ] Tattoo is added to database even if upload function fails
 + [X] Added /delete end-point
++ [ ] Tattoo is added to database even if upload function fails
 + [ ] Move to AWS
 + [ ] /delete and /like reads tattoo-id from email field
-** ??? [1/4]
+** ??? [1/7]
 + [X] Auto-login fails
 + [ ] Liking a tattoo doesn't update the image in popular list [SHOULD IT?]
 + [ ] Change create_json method
 + [ ] Change see more activity to adapt different behaviours
 + [ ] Fix warnings in Android Studio
++ [ ] Check if PNG (in server or android ?)
++ TattooEdit cat problem should appear in Upload but didn't
