--- a/README.org
+++ b/README.org
@@ -32,17 +32,6 @@
 + [X] Tattoo Size is broken on Cat Tattoo
 ** Other User Page [1/1]
 + [X] Image size
-** General [0/3]
-+ [ ] Change text font
-  + [[http://fontawesome.io][FontAwesome]]
-  + [[https://github.com/Bearded-Hen/Android-Bootstrap][Bootstrap]]
-+ [ ] Decide on color scheme
-+ [ ] Animations and transitions:
-  + [[https://developer.android.com/reference/android/transition/package-summary.html][Transitions Library]]
-  + [[https://github.com/castorflex/SmoothProgressBar?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=370][Progress Bar]]
-  + [[https://github.com/daimajia/AndroidViewAnimations][View Animations]]
-  + [[https://github.com/airbnb/lottie-android?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=5203][Lottie]] ????
-  + [[https://github.com/rengwuxian/MaterialEditText][MaterialEditText]]
 ** Search [3/5]
 + [X] [BUG] Search See More inactive
 + [X] [BUG] Tattoo Tag Search
@@ -73,15 +62,15 @@
 ** AR Camera [0/2]
 + [ ] Save
 + [ ] Share
-** Core [6/12]
+** Core [7/10]
 + [X] Limit the Tag length
 + [X] Make all TagViews uniform
 + [X] Tag must be not empty
 + [X] Tag must be unique
 + [X] Change Tattoo tag to make use of the library
 + [X] Upload submit should go back to profile page
++ [X] Liking a tattoo before opening profile page fails
 + [ ] Cache profile photo [[[https://github.com/facebook/fresco][Fresco]]]
-+ [ ] Liking a tattoo before opening profile page fails
 + [ ] Ask for confirmation to discard changes in TattooEdit
 + [ ] Try to combine TagGroup and Tattoo.Tags
 ** Server [1/4]
@@ -89,11 +78,23 @@
 + [ ] Tattoo is added to database even if upload function fails
 + [ ] Move to AWS
 + [ ] /delete and /like reads tattoo-id from email field
-** ??? [1/6]
+** ??? [1/10]
 + [X] Auto-login fails
 + [ ] Liking a tattoo doesn't update the image in popular list [SHOULD IT?]
++ [ ] Refresh doesn't work in Profile Page [SHOULD IT??]
 + [ ] Change create_json method
 + [ ] Change see more activity to adapt different behaviours
 + [ ] Fix warnings in Android Studio
 + [ ] Check if PNG (in server or android ?)
++ [ ] Should Other user have the same design as Profile Page ??
 + TattooEdit cat problem should appear in Upload but didn't
++ [ ] Change text font
+  + [[http://fontawesome.io][FontAwesome]]
+  + [[https://github.com/Bearded-Hen/Android-Bootstrap][Bootstrap]]
++ [ ] Decide on color scheme
++ [ ] Animations and transitions:
+  + [[https://developer.android.com/reference/android/transition/package-summary.html][Transitions Library]]
+  + [[https://github.com/castorflex/SmoothProgressBar?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=370][Progress Bar]]
+  + [[https://github.com/daimajia/AndroidViewAnimations][View Animations]]
+  + [[https://github.com/airbnb/lottie-android?utm_source=android-arsenal.com&utm_medium=referral&utm_campaign=5203][Lottie]] ????
+  + [[https://github.com/rengwuxian/MaterialEditText][MaterialEditText]]
