--- a/README.org
+++ b/README.org
@@ -32,17 +32,15 @@
 + [X] Tattoo Size is broken on Cat Tattoo
 ** Other User Page [1/1]
 + [X] Image size
-** Search [4/6]
+** Search [5/5]
 + [X] [BUG] Search See More inactive
 + [X] [BUG] Tattoo Tag Search
 + [X] Show label when there are no results
 + [X] Add recent searches
-+ [ ] Remove icon from suggestions (Check Github and [[http://stackoverflow.com/questions/30808150/toolbar-search-suggestions-theming][SO]])
-+ [ ] Search User-Name should list users
++ [X] Search User-Name should list users
 ** See more [1/6]
 + [X] See more changes to single row
 + [ ] Auto load at the bottom of the page (Requires change in server)
-+ [ ] Users should have different layout
 + [ ] Change See More button
 + [ ] See more Card layout grid
   Three alternatives: [[https://developer.android.com/training/material/lists-cards.html#cardview][Official]] and [[https://github.com/gabrielemariotti/cardslib][3rd Party]], [[https://github.com/rubensousa/ViewPagerCards][Duolingo-like]]
@@ -84,12 +82,14 @@
 + [X] Auto-login fails
 + [ ] Liking a tattoo doesn't update the image in popular list [SHOULD IT?]
 + [ ] Refresh doesn't work in Profile Page [SHOULD IT??]
++ [ ] Users should have different layout [SHOULD IT??]
 + [ ] Change create_json method
 + [ ] Change see more activity to adapt different behaviours
 + [ ] Fix warnings in Android Studio
 + [ ] Check if PNG (in server or android ?)
 + [ ] Should Other user have the same design as Profile Page ??
 + [ ] Try to combine TagGroup and Tattoo.Tags
++ [ ] Remove icon from suggestions (Check Github and [[http://stackoverflow.com/questions/30808150/toolbar-search-suggestions-theming][SO]])
 + [ ] Change text font
   + [[http://fontawesome.io][FontAwesome]]
   + [[https://github.com/Bearded-Hen/Android-Bootstrap][Bootstrap]]
