--- a/README.org
+++ b/README.org
@@ -38,11 +38,22 @@
 + [X] Show label when there are no results
 + [X] Add recent searches
 + [X] Search User-Name should list users
+** Core [10/10]
++ [X] Limit the Tag length
++ [X] Make all TagViews uniform
++ [X] Tag must be not empty
++ [X] Tag must be unique
++ [X] Change Tattoo tag to make use of the library
++ [X] Upload submit should go back to profile page
++ [X] Liking a tattoo before opening profile page fails
++ [X] Cache profile photo [[[https://github.com/facebook/fresco][Fresco]]]
++ [X] Ask for confirmation to discard changes in TattooEdit
++ [X] Make Images in RecyclerViewAdapter use Fresco
 ** See more [1/6]
 + [X] See more changes to single row
 + [ ] Auto load at the bottom of the page (Requires change in server)
 + [ ] Change See More button
-+ [ ] See more Card layout grid
++ [ ] See more Card layout grid (or simply add borders)
   Three alternatives: [[https://developer.android.com/training/material/lists-cards.html#cardview][Official]] and [[https://github.com/gabrielemariotti/cardslib][3rd Party]], [[https://github.com/rubensousa/ViewPagerCards][Duolingo-like]]
 + [ ] See more: disappearing toolbar
   [[https://developer.android.com/reference/android/support/design/widget/CollapsingToolbarLayout.html][CollapsingToolbarLayout | Android Developers]]
@@ -61,31 +72,23 @@
 ** AR Camera [0/2]
 + [ ] Save
 + [ ] Share
-** Core [10/10]
-+ [X] Limit the Tag length
-+ [X] Make all TagViews uniform
-+ [X] Tag must be not empty
-+ [X] Tag must be unique
-+ [X] Change Tattoo tag to make use of the library
-+ [X] Upload submit should go back to profile page
-+ [X] Liking a tattoo before opening profile page fails
-+ [X] Cache profile photo [[[https://github.com/facebook/fresco][Fresco]]]
-+ [X] Ask for confirmation to discard changes in TattooEdit
-+ [X] Make Images in RecyclerViewAdapter use Fresco
 ** Server [1/4]
 + [X] Added /delete end-point
 + [ ] Tattoo is added to database even if upload function fails
 + [ ] Move to AWS
 + [ ] /delete and /like reads tattoo-id from email field
-** ??? [1/10]
+** ??? [1/17]
 + TattooEdit cat problem should appear in Upload but didn't
 + [X] Auto-login fails
 + [ ] Liking a tattoo doesn't update the image in popular list [SHOULD IT?]
++ [ ] Remove obsoleted functions regarding Image Download
 + [ ] Refresh doesn't work in Profile Page [SHOULD IT??]
-+ [ ] Users should have different layout [SHOULD IT??]
++ [ ] Search Returns tags ordered by ID
++ [ ] SeeMore:Users should have different layout [SHOULD IT??] [Does it even need See-More?]
 + [ ] Change create_json method
-+ [ ] Change see more activity to adapt different behaviours
++ [ ] Change see more activity to adapt different behaviors
 + [ ] Fix warnings in Android Studio
++ [ ] HasTag.owner_id redundant
 + [ ] Check if PNG (in server or android ?)
 + [ ] Should Other user have the same design as Profile Page ??
 + [ ] Try to combine TagGroup and Tattoo.Tags
